<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cosmic_deep_navy">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/input_title"
        app:titleTextColor="@color/cosmic_gold" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/screen_padding">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvForm"
                style="@style/CosmicCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/card_padding">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_name_label">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_sm"
                        android:hint="@string/input_dob_label">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etDateOfBirth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="false"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_sm"
                        android:hint="@string/input_tob_label">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etTimeOfBirth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="false"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:id="@+id/cbTimeUnknown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/input_time_unknown"
                        android:textColor="@color/text_primary" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilPlace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_sm"
                        android:hint="@string/input_place_label">

                        <AutoCompleteTextView
                            android:id="@+id/actvPlace"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:padding="16dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_md"
                        android:text="@string/input_gender_label"
                        android:textColor="@color/text_secondary" />

                    <RadioGroup
                        android:id="@+id/rgGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/input_gender_male"
                            android:textColor="@color/text_primary" />

                        <RadioButton
                            android:id="@+id/rbFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/input_gender_female"
                            android:textColor="@color/text_primary" />

                        <RadioButton
                            android:id="@+id/rbOther"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/input_gender_other"
                            android:textColor="@color/text_primary" />
                    </RadioGroup>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGenerate"
                style="@style/CosmicButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/spacing_xl"
                android:layout_marginBottom="@dimen/spacing_xl"
                android:text="@string/input_generate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvForm"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
