<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cosmic_deep_navy"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/screen_padding">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xl"
            android:text="@string/home_welcome"
            android:textAppearance="@style/TextStyle.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:text="@string/home_subtitle"
            android:textAppearance="@style/TextStyle.Subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <ImageView
            android:id="@+id/ivHoroscope"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/spacing_xl"
            android:src="@drawable/horoscope_circle"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
            app:layout_constraintBottom_toTopOf="@id/btnGenerateChart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGenerateChart"
            style="@style/CosmicButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/spacing_md"
            android:text="@string/home_generate_chart"
            app:layout_constraintBottom_toTopOf="@+id/btnSavedCharts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSavedCharts"
            style="@style/CosmicOutlinedButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:text="@string/home_saved_charts"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
